@@ -22,6 +22,9 @@
 #include <string.h>
 #include <time.h>
 
+#include <gmp.h>
+
+
 #include "mw_channel.h"
 #include "mw_cipher.h"
 #include "mw_debug.h"
@@ -65,6 +68,23 @@ static unsigned char PT[] = {
 };
 
 
+/** prime number used in DH exchange */
+static unsigned char dh_prime[] = {
+  0xCF, 0x84, 0xAF, 0xCE, 0x86, 0xDD, 0xFA, 0x52,
+  0x7F, 0x13, 0x6D, 0x10, 0x35, 0x75, 0x28, 0xEE,
+  0xFB, 0xA0, 0xAF, 0xEF, 0x80, 0x8F, 0x29, 0x17,
+  0x4E, 0x3B, 0x6A, 0x9E, 0x97, 0x00, 0x01, 0x71,
+  0x7C, 0x8F, 0x10, 0x6C, 0x41, 0xC1, 0x61, 0xA6,
+  0xCE, 0x91, 0x05, 0x7B, 0x34, 0xDA, 0x62, 0xCB,
+  0xB8, 0x7B, 0xFD, 0xC1, 0xB3, 0x5C, 0x1B, 0x91,
+  0x0F, 0xEA, 0x72, 0x24, 0x9D, 0x56, 0x6B, 0x9F
+};
+
+
+/** base used in DH exchange */
+#define DH_BASE  3
+
+
 void rand_key(char *key, gsize keylen) {
   srand(clock());
   while(keylen--) key[keylen] = rand() & 0xff;
@@ -86,12 +106,8 @@ void mwKeyExpand(int *ekey, const char *key, gsize keylen) {
   char tmp[128];
   int i, j;
 
-  g_info("mwKeyExpand keylen %u", keylen);
-
   g_return_if_fail(keylen > 0);
   g_return_if_fail(key != NULL);
-
-  mw_debug_data(key, keylen, "Expanding key from (%u bytes):", keylen);
 
   if(keylen > 128) keylen = 128;
 
@@ -295,6 +311,7 @@ void mwDecrypt(const char *key, gsize keylen, char *iv,
 }
 
 
+
 struct mwCipher_RC2_40 {
   struct mwCipher cipher;
   int session_key[64];
@@ -360,19 +377,15 @@ static int decrypt_RC2_40(struct mwCipherInstance *ci,
 }
 
 
-static struct mwCipherInstance *new_instance_RC2_40(struct mwCipher *cipher,
-						    struct mwChannel *chan) {
+static struct mwCipherInstance *
+new_instance_RC2_40(struct mwCipher *cipher,
+		    struct mwChannel *chan) {
+
   struct mwCipher_RC2_40 *cr;
   struct mwCipherInstance_RC2_40 *cir;
   struct mwCipherInstance *ci;
 
   cr = (struct mwCipher_RC2_40 *) cipher;
-
-  cir = g_new0(struct mwCipherInstance_RC2_40, 1);
-  ci = &cir->instance;
-
-  ci->cipher = cipher;
-  ci->channel = chan;
 
   /* a bit of lazy initialization here */
   if(! cr->ready) {
@@ -380,6 +393,12 @@ static struct mwCipherInstance *new_instance_RC2_40(struct mwCipher *cipher,
     mwKeyExpand(cr->session_key, info->login_id, 5);
     cr->ready = TRUE;
   }
+
+  cir = g_new0(struct mwCipherInstance_RC2_40, 1);
+  ci = &cir->instance;
+
+  ci->cipher = cipher;
+  ci->channel = chan;
 
   mwIV_init(cir->incoming_iv);
   mwIV_init(cir->outgoing_iv);
@@ -389,24 +408,40 @@ static struct mwCipherInstance *new_instance_RC2_40(struct mwCipher *cipher,
 
 
 static struct mwEncryptItem *new_item_RC2_40(struct mwCipherInstance *ci) {
-  struct mwEncryptItem *e = g_new0(struct mwEncryptItem, 1);
+  struct mwEncryptItem *e;
+
+  e = g_new0(struct mwEncryptItem, 1);
   e->id = mwCipher_RC2_40;
   return e;
 }
 
 
-static void accept_RC2_40(struct mwCipherInstance *ci) {
-  struct mwCipherInstance_RC2_40 *cir;
-  struct mwLoginInfo *info = mwChannel_getUser(ci->channel);
-
-  cir = (struct mwCipherInstance_RC2_40 *) ci;
-  mwKeyExpand(cir->incoming_key, info->login_id, 5);
+static struct mwEncryptItem *
+offer_RC2_40(struct mwCipherInstance *ci) {
+  return new_item_RC2_40(ci);
 }
 
 
 static void accepted_RC2_40(struct mwCipherInstance *ci,
 			    struct mwEncryptItem *item) {
-  accept_RC2_40(ci);
+
+  struct mwCipherInstance_RC2_40 *cir;
+  struct mwLoginInfo *info;
+
+  cir = (struct mwCipherInstance_RC2_40 *) ci;
+  info = mwChannel_getUser(ci->channel);
+
+  if(info->login_id) {
+    mwKeyExpand(cir->incoming_key, info->login_id, 5);
+  }
+}
+
+
+static struct mwEncryptItem *
+accept_RC2_40(struct mwCipherInstance *ci) {
+
+  accepted_RC2_40(ci, NULL);
+  return new_item_RC2_40(ci);
 }
 
 
@@ -419,13 +454,243 @@ struct mwCipher *mwCipher_new_RC2_40(struct mwSession *s) {
   c->get_name = get_name_RC2_40;
   c->get_desc = get_desc_RC2_40;
   c->new_instance = new_instance_RC2_40;
-  c->new_item = new_item_RC2_40;
+
+  c->offer = offer_RC2_40;
 
   c->accepted = accepted_RC2_40;
   c->accept = accept_RC2_40;
 
   c->encrypt = encrypt_RC2_40;
   c->decrypt = decrypt_RC2_40;
+
+  return c;
+}
+
+
+struct mwCipher_RC2_128 {
+  struct mwCipher cipher;
+  mpz_t prime;
+  mpz_t private_key;
+  struct mwOpaque public_key;
+};
+
+
+struct mwCipherInstance_RC2_128 {
+  struct mwCipherInstance instance;
+  int shared[64];      /* shared secret determined via DH exchange */
+  char outgoing_iv[8];
+  char incoming_iv[8];
+};
+
+
+static const char *get_name_RC2_128() {
+  return "RC2/128 Cipher";
+}
+
+
+static const char *get_desc_RC2_128() {
+  return "RC2, DH shared secret key";
+}
+
+
+static struct mwCipherInstance *
+new_instance_RC2_128(struct mwCipher *cipher,
+		     struct mwChannel *chan) {
+
+  struct mwCipher_RC2_128 *cr;
+  struct mwCipherInstance_RC2_128 *cir;
+  struct mwCipherInstance *ci;
+
+  cr = (struct mwCipher_RC2_128 *) cipher;
+
+  cir = g_new0(struct mwCipherInstance_RC2_128, 1);
+  ci = &cir->instance;
+  
+  ci->cipher = cipher;
+  ci->channel = chan;
+
+  mwIV_init(cir->incoming_iv);
+  mwIV_init(cir->outgoing_iv);
+
+  return ci;
+}
+
+
+static void offered_RC2_128(struct mwCipherInstance *ci,
+			    struct mwEncryptItem *item) {
+  
+  mpz_t remote_key;
+  mpz_t shared;
+  char *sh_buf;
+  gsize sh_len;
+
+  struct mwCipher *c;
+  struct mwCipher_RC2_128 *cr;
+  struct mwCipherInstance_RC2_128 *cir;
+
+  c = ci->cipher;
+  cr = (struct mwCipher_RC2_128 *) c;
+  cir = (struct mwCipherInstance_RC2_128 *) ci;
+
+  mpz_init(remote_key);
+  mpz_init(shared);
+
+  mpz_import(remote_key, item->info.len, 1, 1, 1, 0, item->info.data);
+  mw_debug_opaque(&item->info, "remote key opaque:");
+  gmp_printf("remote_key: \n%Zx\n", remote_key);
+
+  mpz_powm(shared, remote_key, cr->private_key, cr->prime);
+  gmp_printf("shared secret: \n%Zx\n", shared);
+
+  sh_len = (mpz_sizeinbase(shared,2) + 7) / 8;
+
+  sh_buf = g_malloc0(sh_len);
+  mpz_export(sh_buf, NULL, 1, 1, 1, 0, shared);
+
+  mwKeyExpand(cir->shared, sh_buf, sh_len /* 16 */);
+  
+  mpz_clear(remote_key);
+  mpz_clear(shared);
+  g_free(sh_buf);
+}
+
+
+static struct mwEncryptItem *
+offer_RC2_128(struct mwCipherInstance *ci) {
+
+  struct mwCipher *c;
+  struct mwCipher_RC2_128 *cr;
+  struct mwEncryptItem *ei;
+
+  c = ci->cipher;
+  cr = (struct mwCipher_RC2_128 *) c;
+
+  ei = g_new0(struct mwEncryptItem, 1);
+  ei->id = mwCipher_RC2_128;
+  mwOpaque_clone(&ei->info, &cr->public_key);
+
+  return ei;
+}			  
+
+
+static void accepted_RC2_128(struct mwCipherInstance *ci,
+			     struct mwEncryptItem *item) {
+
+  return offered_RC2_128(ci, item);
+}
+
+
+static struct mwEncryptItem *
+accept_RC2_128(struct mwCipherInstance *ci) {
+
+  return offer_RC2_128(ci);
+}
+
+
+static int encrypt_RC2_128(struct mwCipherInstance *ci,
+			   struct mwOpaque *data) {
+
+  struct mwCipherInstance_RC2_128 *cir;
+  struct mwOpaque o = { 0, 0 };
+
+  cir = (struct mwCipherInstance_RC2_128 *) ci;
+
+  mwEncryptExpanded(cir->shared, cir->outgoing_iv, data, &o);
+
+  mwOpaque_clear(data);
+  data->data = o.data;
+  data->len = o.len;
+
+  return 0;
+}
+
+
+static int decrypt_RC2_128(struct mwCipherInstance *ci,
+			   struct mwOpaque *data) {
+
+  struct mwCipherInstance_RC2_128 *cir;
+  struct mwOpaque o = { 0, 0 };
+
+  cir = (struct mwCipherInstance_RC2_128 *) ci;
+
+  mwDecryptExpanded(cir->shared, cir->incoming_iv, data, &o);
+
+  mwOpaque_clear(data);
+  data->data = o.data;
+  data->len = o.len;
+
+  return 0;
+}
+
+
+static void clear_RC2_128(struct mwCipher *c) {
+  struct mwCipher_RC2_128 *cr;
+  cr = (struct mwCipher_RC2_128 *) c;
+
+  mpz_clear(cr->prime);
+  mpz_clear(cr->private_key);
+  mwOpaque_clear(&cr->public_key);
+}
+
+
+struct mwCipher *mwCipher_new_RC2_128(struct mwSession *s) {
+  struct mwCipher_RC2_128 *cr;
+  struct mwCipher *c;
+
+  mpz_t base, pubkey;
+  gmp_randstate_t rstate;
+
+  cr = g_new0(struct mwCipher_RC2_128, 1);
+  c = &cr->cipher;
+
+  c->session = s;
+  c->type = mwCipher_RC2_128;
+  c->get_name = get_name_RC2_128;
+  c->get_desc = get_desc_RC2_128;
+  c->new_instance = new_instance_RC2_128;
+
+  c->offered = offered_RC2_128;
+  c->offer = offer_RC2_128;
+
+  c->accepted = accepted_RC2_128;
+  c->accept = accept_RC2_128;
+
+  c->encrypt = encrypt_RC2_128;
+  c->decrypt = decrypt_RC2_128;
+
+  c->clear = clear_RC2_128;
+
+  mpz_init_set_ui(base, DH_BASE);
+  mpz_init(pubkey);
+  gmp_randinit_default(rstate);
+  
+  mpz_init(cr->prime);
+  mpz_init(cr->private_key);
+  
+  mpz_import(cr->prime, 64, 1, 1, 0, 0, dh_prime);
+  gmp_printf("prime is:\n%#Zx\n", cr->prime);
+
+  mpz_urandomb(cr->private_key, rstate, 512); /* 64 * 8 */
+  gmp_printf("private_key is:\n%#Zx\n", cr->private_key);
+
+  mpz_powm(pubkey, base, cr->private_key, cr->prime);
+  gmp_printf("public_key is:\n%#Zx\n", pubkey);
+  
+  {
+    char *buf;
+    gsize len;
+
+    len = (mpz_sizeinbase(pubkey,2) + 7) / 8;
+    buf = g_malloc0(len);
+    mpz_export(buf, NULL, 1, 1, 1, 0, pubkey);
+
+    cr->public_key.len = len;
+    cr->public_key.data = buf;
+  }
+
+  mpz_clear(base);
+  mpz_clear(pubkey);
+  gmp_randclear(rstate);
 
   return c;
 }
@@ -439,7 +704,7 @@ struct mwSession *mwCipher_getSession(struct mwCipher *cipher) {
 
 guint16 mwCipher_getType(struct mwCipher *cipher) {
   /* oh man, this is a bad failover... who the hell decided to make
-     zero a real cipher id?? */
+     zero a real cipher id? */
   g_return_val_if_fail(cipher != NULL, 0xffff);
   return cipher->type;
 }
@@ -516,7 +781,8 @@ void mwCipherInstance_offered(struct mwCipherInstance *ci,
 }
 
 
-void mwCipherInstance_offer(struct mwCipherInstance *ci) {
+struct mwEncryptItem *
+mwCipherInstance_offer(struct mwCipherInstance *ci) {
   struct mwCipher *cipher;
 
   g_return_if_fail(ci != NULL);
@@ -524,7 +790,7 @@ void mwCipherInstance_offer(struct mwCipherInstance *ci) {
   cipher = ci->cipher;
   g_return_if_fail(cipher != NULL);
 
-  if(cipher->offer) cipher->offer(ci);
+  return cipher->offer(ci);
 }
 
 
@@ -541,7 +807,8 @@ void mwCipherInstance_accepted(struct mwCipherInstance *ci,
 }
 
 
-void mwCipherInstance_accept(struct mwCipherInstance *ci) {
+struct mwEncryptItem *
+mwCipherInstance_accept(struct mwCipherInstance *ci) {
   struct mwCipher *cipher;
 
   g_return_if_fail(ci != NULL);
@@ -549,7 +816,7 @@ void mwCipherInstance_accept(struct mwCipherInstance *ci) {
   cipher = ci->cipher;
   g_return_if_fail(cipher != NULL);
 
-  if(cipher->accept) cipher->accept(ci);
+  return cipher->accept(ci);
 }
 
 
